@startuml
!define TABLE(x) class x << (T,#FFEEEE) >>

TABLE(DEPLOY) {
  DEPLOY_ID : PK
  APPLICATION_NAME
  ENVIRONMENT_NAME
  DEPLOY_TIMESTAMP
}

TABLE(ACTIVITY) {
  ACTIVITY_ID : PK
  DEPLOY_ID : FK
}

TABLE(ACTION) {
  ACTION_ID : PK
  ACTIVITY_ID : FK
}

TABLE(STEP) {
  STEP_ID : PK
  ACTION_ID : FK
  BUILDING_BLOCK
  CRUD_ACTION
}

TABLE(ARTIFACT) {
  ARTIFACT_ID : PK
  APPLICATION_NAME
  ARTIFACT_PATH
}

TABLE(STATE) {
  STATE_ID : PK
  STATE_NAME
}

TABLE(TAG) {
  TAG_ID : PK
  TAG_NAME
}

TABLE(PROPERTIES) {
  PROPERTY_ID : PK
  ENTITY_TYPE
  ENTITY_ID
}

TABLE(STEP_RESULT_DETAIL) {
  RESULT_ID : PK
  STEP_ID : FK
}

DEPLOY ||--o{ ACTIVITY
ACTIVITY ||--o{ ACTION
ACTION ||--o{ STEP

STEP }o--o{ ARTIFACT : STEP_ARTIFACT
ACTION }o--o{ STATE : ACTION_STATE

ACTIVITY }o--o{ TAG
ACTION }o--o{ TAG
STEP }o--o{ TAG

STEP ||--o{ STEP_RESULT_DETAIL
@enduml
